// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea.vue matches snapshot with disabled prop assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"5\\" maxlength=\\"524288\\" disabled=\\"disabled\\" class=\\"form-control\\"></textarea>
  <!---->
</div>"
`;

exports[`Textarea.vue matches snapshot with maxlength and count-characters prop assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"5\\" maxlength=\\"50\\" class=\\"form-control\\"></textarea>
  <character-counter-stub currentvalue=\\"0\\" maxvalue=\\"50\\" class=\\"text-right text-gray-500\\"></character-counter-stub>
</div>"
`;

exports[`Textarea.vue matches snapshot with no props assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"5\\" maxlength=\\"524288\\" class=\\"form-control\\"></textarea>
  <!---->
</div>"
`;

exports[`Textarea.vue matches snapshot with placeholder prop assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"5\\" maxlength=\\"524288\\" placeholder=\\"This is a placeholder\\" class=\\"form-control\\"></textarea>
  <!---->
</div>"
`;

exports[`Textarea.vue matches snapshot with readonly prop assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"5\\" maxlength=\\"524288\\" readonly=\\"readonly\\" class=\\"form-control\\"></textarea>
  <!---->
</div>"
`;

exports[`Textarea.vue matches snapshot with rows prop assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"2\\" maxlength=\\"524288\\" class=\\"form-control\\"></textarea>
  <!---->
</div>"
`;

exports[`Textarea.vue matches snapshot with value prop assigned 1`] = `
"<div data-id=\\"sds-textarea\\"><textarea rows=\\"5\\" maxlength=\\"524288\\" class=\\"form-control\\"></textarea>
  <!---->
</div>"
`;
